fixed horizontal scrolling in nav

--- a/app/css/nav.css
+++ b/app/css/nav.css
@@ -108,8 +108,8 @@
 }
 
 .nav-footer-icon {
-  width: calc(770px / 2.5);
-  height: calc(88px / 2.5);
+  width: calc(770px / 4.5);
+  height: calc(88px / 4.5);
 }
 
 .nav-footer a {
